correct update policy pause time format

--- a/az-asg.config.yaml
+++ b/az-asg.config.yaml
@@ -9,7 +9,7 @@ asg_update_policy:
     - AZRebalance
     - AlarmNotification
     - ScheduledActions
-  pause_time: PT05
+  pause_time: PT5M
   wait_on_signals: 'false'
 
 
