fix cfn signal in default userdata

--- a/az-asg.config.yaml
+++ b/az-asg.config.yaml
@@ -25,11 +25,12 @@ linux_user_data: |
   #!/bin/bash
   hostname ${EnvironmentName}-${RoleName}-`/opt/aws/bin/ec2-metadata --instance-id|/usr/bin/awk '{print $2}'`
   sed '/HOSTNAME/d' /etc/sysconfig/network > /tmp/network && mv -f /tmp/network /etc/sysconfig/network && echo "HOSTNAME=${EnvironmentName}-`/opt/aws/bin/ec2-metadata --instance-id|/usr/bin/awk '{print $2}'`" >>/etc/sysconfig/network && /etc/init.d/network restart
+  cfn-signal -e $? --region ${AWS::Region} --stack ${AWS::StackName} --resource AutoScaleGroup${AZId}
 
 windows_user_data: |
   <powershell>
   $instanceId = invoke-restmethod -uri http://169.254.169.254/latest/meta-data/instance-id
-  cfn-signal.exe -e $lastexitcode --region ${AWS::Region} --stack ${AWS::StackName} --resource 'AutoScaleGroup'
+  cfn-signal.exe -e $lastexitcode --region ${AWS::Region} --stack ${AWS::StackName} --resource AutoScaleGroup${AZId}
   </powershell>
 
 ## Exectued in the order provided
